# rust-alignbench

./: Cargo.toml  README.md
analysis/: README.md  analyze.py  bench_results.json  notebook.ipynb
analysis/internal/: LOG  README.md
benches/: bench.rs
tests/: tests.rs
