[package]
name = "rust-alignbench"
version = "0.1.0"
edition = "2021"

[dependencies]
#libwfa = { git = "https://github.com/chfi/rs-wfa/" } # leaving it commented for now, it doesn't play well with WFA2, but also, that repo has broken submodule
rust-wfa2 = { git = "https://github.com/rchikhi/rust-wfa2/" }
wfa = { git = "https://github.com/ekimb/wfa" }
#block-aligner = { version = "^0.2.0", features = ["simd_avx2"] }
# code has changed since 0.2.0, need to reference the git now:
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner/", features = ["simd_avx2"] }
ksw2-sys = { git = "https://github.com/rchikhi/ksw2-sys/" }
Scrooge-sys = { git = "https://github.com/rchikhi/Scrooge-sys/" }

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "^0.8", default-features = false, features = ["std_rng", "alloc"] }
bio = "^0.33"
parasailors = "^0.3.1"

[[bench]]
name = "bench"
harness = false

[features]
# Enable AVX2
simd_avx2 = []
